--- a/Source/SDL Game.vcxproj
+++ b/Source/SDL Game.vcxproj
@@ -76,6 +76,8 @@
     <ClInclude Include="Application.h" />
     <ClInclude Include="Globals.h" />
     <ClInclude Include="ModulePhysics.h" />
+    <ClInclude Include="ModuleSceneEnding.h" />
+    <ClInclude Include="ModuleSceneGame.h" />
     <ClInclude Include="p2List.h" />
     <ClInclude Include="Module.h" />
     <ClInclude Include="ModuleAudio.h" />
@@ -97,6 +99,8 @@
     <ClCompile Include="ModulePhysics.cpp" />
     <ClCompile Include="ModulePlayer.cpp" />
     <ClCompile Include="ModuleRender.cpp" />
+    <ClCompile Include="ModuleSceneEnding.cpp" />
+    <ClCompile Include="ModuleSceneGame.cpp" />
     <ClCompile Include="ModuleSceneIntro.cpp" />
     <ClCompile Include="ModuleTextures.cpp" />
     <ClCompile Include="ModuleWindow.cpp" />
