--- a/Source/SDL Game.vcxproj
+++ b/Source/SDL Game.vcxproj
@@ -75,6 +75,7 @@
   <ItemGroup>
     <ClInclude Include="Application.h" />
     <ClInclude Include="Globals.h" />
+    <ClInclude Include="ModuleFadeToBlack.h" />
     <ClInclude Include="ModulePhysics.h" />
     <ClInclude Include="ModuleSceneEnding.h" />
     <ClInclude Include="ModuleSceneGame.h" />
@@ -95,6 +96,7 @@
     <ClCompile Include="log.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="ModuleAudio.cpp" />
+    <ClCompile Include="ModuleFadeToBlack.cpp" />
     <ClCompile Include="ModuleInput.cpp" />
     <ClCompile Include="ModulePhysics.cpp" />
     <ClCompile Include="ModulePlayer.cpp" />
