--- a/Source/SDL Game.vcxproj
+++ b/Source/SDL Game.vcxproj
@@ -75,6 +75,7 @@
   <ItemGroup>
     <ClInclude Include="Application.h" />
     <ClInclude Include="Globals.h" />
+    <ClInclude Include="Cordinates.h" />
     <ClInclude Include="ModuleFadeToBlack.h" />
     <ClInclude Include="ModulePhysics.h" />
     <ClInclude Include="ModuleSceneEnding.h" />
