--- a/Source/SDL Game.vcxproj.filters
+++ b/Source/SDL Game.vcxproj.filters
@@ -65,6 +65,9 @@
     <ClInclude Include="ModuleFadeToBlack.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Cordinates.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
