--- a/Source/SDL Game.vcxproj
+++ b/Source/SDL Game.vcxproj
@@ -77,6 +77,7 @@
     <ClInclude Include="Globals.h" />
     <ClInclude Include="Cordinates.h" />
     <ClInclude Include="ModuleFadeToBlack.h" />
+    <ClInclude Include="ModuleFonts.h" />
     <ClInclude Include="ModulePhysics.h" />
     <ClInclude Include="ModuleSceneEnding.h" />
     <ClInclude Include="ModuleSceneGame.h" />
@@ -98,6 +99,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="ModuleAudio.cpp" />
     <ClCompile Include="ModuleFadeToBlack.cpp" />
+    <ClCompile Include="ModuleFonts.cpp" />
     <ClCompile Include="ModuleInput.cpp" />
     <ClCompile Include="ModulePhysics.cpp" />
     <ClCompile Include="ModulePlayer.cpp" />
