Score and making chains bouning
Warro arregla la linea a medias

--- a/Source/SDL Game.vcxproj.filters
+++ b/Source/SDL Game.vcxproj.filters
@@ -80,6 +80,9 @@
       <Filter>Source Files\Modules\Core</Filter>
     </ClInclude>
     <ClInclude Include="Animation.h" />
+    <ClInclude Include="Score.h">
+      <Filter>Source Files\Modules\Gameplay</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp">
@@ -126,6 +129,9 @@
     </ClCompile>
     <ClCompile Include="ModuleWindow.cpp">
       <Filter>Source Files\Modules\Core</Filter>
+    </ClCompile>
+    <ClCompile Include="Score.cpp">
+      <Filter>Source Files\Modules\Gameplay</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
