--- a/Source/SDL Game.vcxproj.filters
+++ b/Source/SDL Game.vcxproj.filters
@@ -83,6 +83,9 @@
     <ClInclude Include="ModuleUi.h">
       <Filter>Source Files\Modules\Gameplay</Filter>
     </ClInclude>
+    <ClInclude Include="SString.h">
+      <Filter>Source Files\Containers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp">
