--- a/Source/SDL Game.vcxproj
+++ b/Source/SDL Game.vcxproj
@@ -94,6 +94,7 @@
     <ClInclude Include="p2DynArray.h" />
     <ClInclude Include="p2Point.h" />
     <ClInclude Include="ModuleUi.h" />
+    <ClInclude Include="SString.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
